# netxduo_projects

./: CMakeLists.txt  README.MD  nx_user.h
.devcontainer/: Dockerfile
driver/: nx_linux_network_driver.c
issue_107/: CMakeLists.txt  README.MD  cert.h  main.c
issue_112/: CMakeLists.txt  README.MD  cert.h  main.c
mosquitto_server/: CMakeLists.txt  README.MD  ca.crt  ca.h  main.c  mosquitto.conf  nx_user.h  server.crt
tools/: cert_gen.sh  init_network.sh  text_gen.sh
